<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llvtit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvtit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titre"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/calculp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tldon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llvtit">

        <TableRow
            android:id="@+id/tr1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvsais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/saisie"
                android:textColor="@color/mycolor"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtop1"

                android:textColor="@color/mycolor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/op1"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/neg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/neg"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tr3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtop2"
                android:textColor="@color/mycolor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/op2"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/neg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/neg"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tldon">

        <TextView
            android:id="@+id/tvop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtop"
            android:textSize="24sp"
            android:textColor="@color/mycolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rgop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvop">

            <RadioButton
                android:id="@+id/rbadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbsous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sous"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbmul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mul"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbdiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/div"
                android:textSize="20sp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llhres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clop">

        <Button
            android:id="@+id/btncalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/cal"
            />

        <TextView
            android:id="@+id/txtres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/res"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>