<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_calculate">

    <LinearLayout
        android:id="@+id/llvtit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/tvtit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titre"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/calculp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/buttonSimple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            />

        <Button
            android:id="@+id/buttonScientifique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scientifique"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llvtit">
        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text_style"
            android:inputType="number" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                />
            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                />
            <Button
                android:id="@+id/buttonMult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                />
            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                />
        </LinearLayout>

        <Button
            android:id="@+id/buttonCompute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cal"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>